--- a/index.html
+++ b/index.html
@@ -2,42 +2,153 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Tirth Patel</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
+<main>
+    <!-- Profile -->
     <header>
-        <h1>Tirth Patel</h1>
-        <h2>Competitive Programmer, Web development and Machine Learning Enthusiast</h2>
+        <div class="content-wrap">
+            <h1>Tirth Patel</h1>
+            <h2>Competitive Programmer, Web development and Machine Learning Enthusiast</h2>
 
-        <p>I am CS Undergrad finding my way in this globe. Exploring Web development and Machine Learning domains.</p>
-        <p>Currently, finding internships or part-time jobs to get industrial knowledge and experience.</p>
+            <p>I am CS Undergrad finding my way in this globe. Exploring Web development and Machine Learning
+                domains.</p>
+            <p>Currently, finding internships or part-time jobs to get industrial knowledge and experience.</p>
+        </div>
     </header>
-    <section>
-        <h2>Featured Projects</h2>
-        <p>View selected projects below. More information can be found at my <a href="https://github.com/tirthPatel177">GitHub</a>.</p>
+    <!-- Projects -->
+    <section class="projects">
+        <div class="content-wrap">
+            <h2>Featured Projects</h2>
+            <p>View selected projects below. More information can be found at my <a
+                    href="https://github.com/tirthPatel177">GitHub</a>.</p>
 
-        <!-- Project 1 -->
-        <section>
-          <h3>RCNN</h3>
-          <img src="images/project-rcnn.jpg" alt="description of project">
-          <p>Developed a traditional object detection algorithm RCNN. Using numpy developed CNN from scratch.</p>
-        </section>
+            <!-- Project 1 -->
+            <section>
+                <h3>RCNN</h3>
+                <img alt="description of project" src="images/project-rcnn.jpg">
+                <p>Developed a traditional object detection algorithm RCNN. Using numpy developed CNN from scratch.</p>
+            </section>
 
-        <!-- Project 2 -->
-        <section>
-          <h3>Speech Compression Using LPC</h3>
-          <img src="images/project-lpc.jpg" alt="description of image">
-          <p>Performed LPC analysis and synthesis on speech signal. Also developed GUI for visuals.</p>
-        </section>
+            <!-- Project 2 -->
+            <section>
+                <h3>Speech Compression Using LPC</h3>
+                <img alt="description of image" src="images/project-lpc.jpg">
+                <p>Performed LPC analysis and synthesis on speech signal. Also developed GUI for visuals.</p>
+            </section>
 
-        <!-- Project 3 -->
-        <section>
-          <h3>College Information System</h3>
-          <img src="images/project-c.png" alt="description of image">
-          <p>Developed a basic application in C which gives general information to the students studying there. Developed different interface for admin and students.</p>
-        </section>
-      </section>
+            <!-- Project 3 -->
+            <section>
+                <h3>College Information System</h3>
+                <img alt="description of image" src="images/project-c.png">
+                <p>Developed a basic application in C which gives general information to the students studying there.
+                    Developed different interface for admin and students.</p>
+            </section>
+        </div>
+    </section>
+
+    <!--  Work Experience-->
+    <section class="work-experience">
+        <div class="content-wrap">
+            <h2>Work Experience</h2>
+            <p>See my complete work history on <a href="https://www.linkedin.com/in/christinatruong/">LinkedIn</a>.</p>
+
+            <!-- Job 1 -->
+            <section>
+                <h3>Front-end Developer & Educator</h3>
+                <p>Freelance</p>
+                <p>July 2006-Present</p>
+                <p>Provides various front-end related services ranging from development work, speaking engagements,
+                    instructor training, workshops, and curriculum development. See more at <a
+                            href="http://christinatruong.com">christinatruong.com</a>.</p>
+            </section>
+
+            <!-- Job 2 -->
+            <section>
+                <h3>Director of Curriculum</h3>
+                <p>Ladies Learning Code</p>
+                <p>July 2014 - February 2016</p>
+                <p>Managed all curriculum for the adult programs. Created teaching materials and implemented instructor
+                    training across 20+ Canadian chapters.</p>
+                <p>Key contributions:</p>
+                <ul>
+                    <li>Overhauled the curriculum and standardized the content and delivery.
+                        <ul>
+                            <li>Created 9 new workshops focusing on HTML, CSS, JavaScript, jQuery, Wordpress and
+                                Responsive Web Design.
+                            </li>
+                            <li>Created all Hackapalooza content (2 day conference style event) consisting of 2-4 hour
+                                workshop sessions.
+                            </li>
+                            <li>Created interactive slide deck template for consistent national workshop branding.</li>
+                            <li>Developed the Digital Skills part-time program curriculum.</li>
+                        </ul>
+                    </li>
+                    <li>Provided training for all instructors focusing on creating an inclusive and engaging learning
+                        environment.
+                    </li>
+                    <li>Maintained the ladieslearningcode.com website.</li>
+                    <li>Volunteer lead instructor from 2011-2014 for Toronto workshops and several chapter launches.
+                    </li>
+                </ul>
+            </section>
+
+            <!-- Job 3 -->
+            <section>
+                <h3>Lead Front-End Developer</h3>
+                <p>Field iD</p>
+                <p>March 2013 - February 2014</p>
+                <p>Lead the front-end development for the in-house safety inspection software.</p>
+                <p>Key contributions:</p>
+                <ul>
+                    <li>Responsible for setting code standards for the front-end development.</li>
+                    <li>Created a fully customized front-end framework, including the UI/UX design.</li>
+                    <li>Standardized the site architecture and design.</li>
+                </ul>
+            </section>
+        </div>
+    </section>
+    <!--  Education and Certification-->
+    <section class="education">
+        <div class="content-wrap">
+            <h2>Education</h2>
+            <section>
+                <h3>School of Engineering and Applied Science, Ahmedabad University</h3>
+                <p>Info: </p>
+                <p>Current CGPA: </p>
+            </section>
+
+            <section>
+                <h3>HSC and SSC</h3>
+                <p>HSC Marks: </p>
+                <p>SSC Marks: </p>
+            </section>
+
+            <section>
+                <h3>Other Certification</h3>
+                <p>Python Programming</p>
+                <p>Machine Learning</p>
+            </section>
+        </div>
+    </section>
+
+    <!-- Contact -->
+    <footer>
+        <div class="content-wrap">
+            <h2>Let's Keep in Touch!</h2>
+
+            <!-- Social media and contact links. Add or remove any networks. -->
+            <ul>
+                <li><a href="177tpatel@gmail.com">177tpatel@gmail.com</a></li>
+                <li><a href="https://www.linkedin.com/in/tirth-patel-412b70192" target="_blank">LinkedIn</a></li>
+                <li><a href="#" target="_blank">Instagram</a></li>
+                <li><a href="" target="_blank">Twitter</a></li>
+            </ul>
+        </div>
+    </footer>
+</main>
 </body>
 </html>
