--- a/index.html
+++ b/index.html
@@ -54,60 +54,15 @@
     <section class="work-experience">
         <div class="content-wrap">
             <h2>Work Experience</h2>
-            <p>See my complete work history on <a href="https://www.linkedin.com/in/christinatruong/">LinkedIn</a>.</p>
+            <p>See my complete work history on <a href="https://www.linkedin.com/in/tirth-patel-412b70192">LinkedIn</a>.</p>
 
             <!-- Job 1 -->
             <section>
-                <h3>Front-end Developer & Educator</h3>
-                <p>Freelance</p>
-                <p>July 2006-Present</p>
-                <p>Provides various front-end related services ranging from development work, speaking engagements,
-                    instructor training, workshops, and curriculum development. See more at <a
-                            href="http://christinatruong.com">christinatruong.com</a>.</p>
-            </section>
-
-            <!-- Job 2 -->
-            <section>
-                <h3>Director of Curriculum</h3>
-                <p>Ladies Learning Code</p>
-                <p>July 2014 - February 2016</p>
-                <p>Managed all curriculum for the adult programs. Created teaching materials and implemented instructor
-                    training across 20+ Canadian chapters.</p>
-                <p>Key contributions:</p>
-                <ul>
-                    <li>Overhauled the curriculum and standardized the content and delivery.
-                        <ul>
-                            <li>Created 9 new workshops focusing on HTML, CSS, JavaScript, jQuery, Wordpress and
-                                Responsive Web Design.
-                            </li>
-                            <li>Created all Hackapalooza content (2 day conference style event) consisting of 2-4 hour
-                                workshop sessions.
-                            </li>
-                            <li>Created interactive slide deck template for consistent national workshop branding.</li>
-                            <li>Developed the Digital Skills part-time program curriculum.</li>
-                        </ul>
-                    </li>
-                    <li>Provided training for all instructors focusing on creating an inclusive and engaging learning
-                        environment.
-                    </li>
-                    <li>Maintained the ladieslearningcode.com website.</li>
-                    <li>Volunteer lead instructor from 2011-2014 for Toronto workshops and several chapter launches.
-                    </li>
-                </ul>
-            </section>
-
-            <!-- Job 3 -->
-            <section>
-                <h3>Lead Front-End Developer</h3>
-                <p>Field iD</p>
-                <p>March 2013 - February 2014</p>
-                <p>Lead the front-end development for the in-house safety inspection software.</p>
-                <p>Key contributions:</p>
-                <ul>
-                    <li>Responsible for setting code standards for the front-end development.</li>
-                    <li>Created a fully customized front-end framework, including the UI/UX design.</li>
-                    <li>Standardized the site architecture and design.</li>
-                </ul>
+                <h3>Intern at HOLF</h3>
+                <p>Volunteering</p>
+                <p>Time Period of internship: </p>
+                <p>Basic overview of what we did..... link the HOLF  <a
+                            href="">High On Life Foundation</a>.</p>
             </section>
         </div>
     </section>
