--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Tirth Patel</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Kalam&family=Roboto&display=swap" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
@@ -61,8 +63,7 @@
                 <h3>Intern at HOLF</h3>
                 <p>Volunteering</p>
                 <p>Time Period of internship: </p>
-                <p>Basic overview of what we did..... link the HOLF  <a
-                            href="">High On Life Foundation</a>.</p>
+                <p>Basic overview of what we did..... link the HOLF  <a href="">High On Life Foundation</a>.</p>
             </section>
         </div>
     </section>
@@ -99,7 +100,7 @@
             <ul>
                 <li><a href="177tpatel@gmail.com">177tpatel@gmail.com</a></li>
                 <li><a href="https://www.linkedin.com/in/tirth-patel-412b70192" target="_blank">LinkedIn</a></li>
-                <li><a href="#" target="_blank">Instagram</a></li>
+                <li><a href="https://instagram.com/tirth_177?igshid=fdl5aa6dlxri" target="_blank">Instagram</a></li>
                 <li><a href="" target="_blank">Twitter</a></li>
             </ul>
         </div>
